@@ -310,18 +310,6 @@ Transaction.prototype._captureBreakdown = function (span) {
 
   // Record transaction data
   if (span instanceof Transaction) {
-    const { duration } = this._timer
-    const labels = flattenBreakdown({
-      transaction: transactionBreakdownDetails(this)
-    })
-
-    metrics.incrementCounter('transaction.duration.count', labels)
-    metrics.incrementCounter('transaction.duration.sum.us', labels, duration)
-
-    if (conf.breakdownMetrics) {
-      metrics.incrementCounter('transaction.breakdown.count', labels, this.sampled ? 1 : 0)
-    }
-
     for (const { labels, time, count } of this._breakdownTimings.values()) {
       const flattenedLabels = flattenBreakdown(labels)
       metrics.incrementCounter('span.self_time.count', flattenedLabels, count)
